--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "socket.io": "^2.1"
     },
     "engines": {
-        "node": "^10.0"
+        "node": "^10.0",
+        "npm": "^6.0"
     }
 }
